# simple-hough-transform

./: .gitignore  CMakeLists.txt  README.md  hough.cc
include/: collisions.h  filters.h
src/: collisions.cc  filters.cc  hough.cc
